--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "devDependencies": {
     "http-server": "^0.12.3",
+    "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0"
   }
 }
