--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^17.0.1",
     "reactstrap": "^7.1.0",
     "styled-components": "^4.4.1"
   },
@@ -28,6 +31,7 @@
   ],
   "devDependencies": {
     "http-server": "^0.12.3",
+    "jest-extended": "^0.11.5",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0"
   }
